--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -146,7 +146,8 @@ form.filters { margin-bottom: 10px; }
   }
   input:checked ~ label { font-weight: bold; }
   .child { display:none; }
-  input:checked ~ .child { display: block; }
+  // child categories are temporarily disabled
+  //input:checked ~ .child { display: block; }
 }
 
 #bot_right,#mobileCart {
