--- a/course/templates/course/_course_row.html
+++ b/course/templates/course/_course_row.html
@@ -12,6 +12,7 @@
       <div class="picture">
         <img ng-src="{{ course.im.url }}" width="{{ course.im.width }}"
              height="{{ course.im.height }}" />
+        <div class="enrolled-status" data-status="{{ course.enrolled_status }}"></div>
       </div>
       <div class="details">
         <div class="subjects"><span ng-repeat="subject in course.subject_names">
@@ -30,9 +31,9 @@
             Full Session<span ng-if="course.full_sessions.length >1">s</span></span>
         </div>
         <div class="enrolled-status" data-status="{{ course.enrolled_status }}"></div>
-        <div class="price" ng-if="course.fee > 0">${{ course.fee*discount|number:0 }}</div>
-        <div class="price" ng-if="course.fee == 0">FREE</div>
       </div>
+      <div class="price" ng-if="course.fee > 0">${{ course.fee*discount|number:0 }}</div>
+      <div class="price" ng-if="course.fee == 0">FREE</div>
     </a>
   </div>
 </div>
