--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -62,6 +62,12 @@
     right: 0;
     top: -54px;
   }
+  .session {
+    margin-bottom: 20px;
+    text-align: right;
+    width: 100%;
+    .full { color: @brand-danger; }
+  }
 }
 
 .course .details {
@@ -157,23 +163,6 @@
   .RsvpLink, .EnrollLink {
     margin-bottom: 20px;
     text-align: center;
-  }
-  label {
-    display: block;
-    font-weight: inherit;
-    position: relative;
-    text-align: right;
-    .fa-check {
-      color: @brand-success;
-      display: none;
-    }
-    .fa-dot-circle-o { display: none; }
-    .fa-check,.fa-circle-o,.fa-dot-circle-o {
-      position: absolute;
-      top: 7px;
-      left: 7px;
-    }
-    .full { color: @brand-danger; }
   }
   .error { display: none; }
   [type="radio"] {
