trying something new with session selector

--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -76,8 +76,15 @@
     margin-bottom: 20px;
     text-align: right;
     width: 100%;
-    .dates { margin-bottom: 10px; }
     .full { color: @brand-danger; }
+  }
+  .add_session_box {
+    text-align: center;
+    select {
+      display: inline-block;
+      margin-bottom: 10px;
+    }
+    button { margin-bottom: 20px; }
   }
 }
 
