--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -94,7 +94,19 @@
         Free
         {% endif %}
       </h1>
-      <h2>Choose a session:</h2><br />
+      <h2>Choose a session:</h2>
+      {% if course.open_sessions %}
+      <div class="add_session_box">
+        <select id="session_selector">
+          {% for session in course.open_sessions %}
+          <option value="{{ session.id }}">
+            {{ session.get_short_dates }} with {{ session.user }}
+          {% endfor %}
+        </select>
+        <button class="btn btn-primary" onclick="addClass();">
+          Add to Cart</button>
+      </div>
+      {% endif %}
       {% for session in course.active_sessions %}
       <div class="session well">
         <div class="dates">
@@ -105,10 +117,6 @@
         {% if session.full %}
         <b class="full">This session is full</b>
         {% else %}
-        <center>
-          <button class="btn btn-primary" onclick="addClass({{ session.id }});">
-            Enroll in this Session</button>
-        </center>
         {% endif %}
       </div>
       <script>
