--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -51,6 +51,7 @@ h3.block_title {
   font-weight: normal;
   margin: 0 0 15px;
   text-transform: uppercase;
+  &.margin-top { margin: 15px 0 5px; }
 }
 
 #side {
