--- a/course/templates/course/instructor_session.html
+++ b/course/templates/course/instructor_session.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <div class="col-sm-12">
-  <h1 class="page-title">{{ session.section.course.name }} - {{ session.get_short_dates }}</h1>
+  <h1 class="page-title">{{ session.course.name }} - {{ session.get_short_dates }}</h1>
 </div>
 {% if session.get_evaluations %}
 <div class="col-sm-12">
