--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -14,6 +14,10 @@
   width: 100%;
   &.enrolled { background: #A9CEE0; }
 }
+ 
+.needs_ajax {
+  &:before { content: "Loading..."; }
+}
 
 .course {
   .picture {
