--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -98,10 +98,12 @@ USER_COURSE_IDS = [];
 <div class="col-sm-9 col-md-10 col-lg-10">
   <ul class="nav nav-tabs" role="tablist">
     <li class="active"><a href="#all_classes" role="tab" data-toggle="tab">All Classes</a></li>
-    <li><a href="#my_classes" role="tab" data-toggle="tab">
+    <li><a href="#myclasses" role="tab" data-toggle="tab"
+           data-href="{% url "course:user_ajax" "myclasses" %}">
         My Classes ({{ user_sessions|length }})</a></li>
     {% if instructor_sessions %}
-    <li><a href="#instructor_sessions" role="tab" data-toggle="tab">
+    <li><a href="#instructor_sessions" role="tab" data-toggle="tab"
+           data-href="{% url "course:user_ajax" "instructor" %}">
         Instructor ({{ instructor_sessions|length }})</a></li>
     {% endif %}
   </ul>
@@ -111,32 +113,9 @@ USER_COURSE_IDS = [];
         {% include "course/_course_row.html" %}
       </div>
     </div>
-    <div class="tab-pane" id="my_classes">
-      {% include "course/_myclasses.html" %}
-    </div>
+    <div class="tab-pane needs_ajax" id="myclasses"></div>
     {% if instructor_sessions %}
-    <div class="tab-pane" id="instructor_sessions">
-      <ul>
-        {% for session in instructor_sessions %}
-        {% ifchanged session.past %} {% if session.past %}
-        <li><h3 class="block_title margin-top">Past Courses</h3></li>
-        {% endif %}{% endifchanged %}
-        <li>
-          <a href="{% url "course:instructor_session" session.pk %}"> {{ session.course }}</a>
-          ({{ session.get_short_dates }} - {{ session.first_date.year }})
-          <p>
-            {% if session.past %}
-            {{ session.evaluated_students }}/{{ session.total_students }} students evaluated
-            <br />
-            {{ session.completed_students }}/{{ session.total_students }} students marked completed
-            {% else %}
-            {{ session.total_students }}/{{ session.course.max_students }} students
-            {% endif %}
-          </p>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
+    <div class="tab-pane needs_ajax" id="instructor_sessions"></div>
     {% endif %}
   </div>
 </div>
